--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,26 +3,40 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Introduction to R - Lessons 1-4</td> </tr>
+      <tr> <td>09:00</td>  <td>Introduction to R and RStudio - Lessons 1-2</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Introduction to R - Lessons 5-8</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>10:50</td>  <td>Introduction to R - Lessons 3-5</td> </tr>
+      <tr> <td>12:30</td>  <td>END</td> </tr>
     </table>
   </div>
-  <div class="col-md-6">
+     <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Introduction to R - Lessons 9-12</td> </tr>
+      <tr> <td>9:00</td>  <td>Introduction to R - Lessons 6-7</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Introduction to R - Lessons 13-16</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr> <td>10:50</td>  <td>Plotting data using R - Lessons 8</td> </tr>
+      <tr> <td>12:30</td>  <td>END</td> </tr>
     </table>
+  </div><br/>
+  <div class="col-md-6">
+    <h3>Day 3</h3>
+    <table class="table table-striped">
+      <tr> <td>09:00</td>  <td>Introduction to R - Lessons 9-10</td> </tr>
+      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
+      <tr> <td>10:50</td>  <td>Introduction to R - Lessons 11-12</td> </tr>
+      <tr> <td>12:30</td>  <td>END</td> </tr>
+    </table>
+  </div>
+    <div class="col-md-6">
+    <h3>Day 4</h3>
+    <table class="table table-striped">
+      <tr> <td>09:00</td>  <td>Introduction to R - Lessons 13-14</td> </tr>
+      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
+      <tr> <td>10:50</td>  <td>Introduction to R - Lessons 15-16</td> </tr>
+      <tr> <td>12:15</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>12:25</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
+      <tr> <td>12:30</td>  <td>END</td> </tr>
+    </table>
+   <br/>
   </div>
 </div>
